# youtube-analytics-project

./: pyproject.toml
homework-5/: main.py
src/: channel.py  video.py
